# vectogebra

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  setup.cfg  setup.py
src/vectogebra/: __init__.py  geometry.py  utilities.py  vector.py
test/: __init__.py  test_algebra.py  test_attributes.py  test_geometry.py  test_utilities.py
