# NOTE:-
# every time you want to compile(build/ditributre)
# change the version 
# and run $ python -m build

[metadata]
name = vectogebra
version = 0.0.10
author = Mohammad Maasir
license = MIT
author_email = maasir554@gmail.com
description = Python library for vector class and utilities for vector algebra.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maasir554/vectogebra
project_urls =
    Bug Tracker = https://github.com/maasir554/vectogebra/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src